RESOLVED FIXED107215
[BlackBerry] Assert failing in RenderQueue::renderScrollZoomJobs
https://bugs.webkit.org/show_bug.cgi?id=107215
Summary [BlackBerry] Assert failing in RenderQueue::renderScrollZoomJobs
Andrew Lo
Reported 2013-01-17 19:06:25 PST
Render jobs were attempted while the surface pool was inactive, when a new page was invoked externally.
Attachments
Patch (1.89 KB, patch)
2013-01-17 19:13 PST, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-01-17 19:13:26 PST
Rob Buis
Comment 2 2013-01-18 04:42:32 PST
Comment on attachment 183350 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-01-18 04:51:42 PST
Comment on attachment 183350 [details] Patch Clearing flags on attachment: 183350 Committed r140128: <http://trac.webkit.org/changeset/140128>
WebKit Review Bot
Comment 4 2013-01-18 04:51:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.