[BlackBerry] Assert failing in RenderQueue::renderScrollZoomJobs https://bugs.webkit.org/show_bug.cgi?id=107215

Patch by Andrew Lo <anlo@rim.com> on 2013-01-18
Reviewed by Rob Buis.
Internally reviewed by Jakob Petsovits.

Internal PR276660
Render jobs should not be performed if the backing store is inactive.

This occured when the browser was invoked, causing a web page to be made
visible before the surface pool was resumed.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::shouldPerformRenderJobs):

Canonical link: https://commits.webkit.org/125491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140128 268f45cc-cd09-0410-ab3c-d52691b4dbfc